--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(20px);
             /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #7f6c85;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #0fa958);
+            background: linear-gradient(135deg, #7f6c85, #7f6c85);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -123,7 +123,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #7f6c85;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -140,7 +140,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #7f6c85;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -164,12 +164,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #7f6c85;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #7f6c85;
         }
 
         input[type="text"],
@@ -299,7 +299,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #7f6c85;
             color: #fff;
         }
 
@@ -519,7 +519,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #7f6c85;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -582,7 +582,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #7f6c85;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -591,7 +591,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #7f6c85;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -607,11 +607,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #dc3545;
+            background-color: #00c85e;
         }
 
         .submit-button:hover {
-            background-color: #c82333;
+            background-color: #00c85e;
         }
 
         @media (max-width: 768px) {
@@ -660,7 +660,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #13ca5e;
+            background-color: #7f6c85;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -748,7 +748,7 @@
     </div>
 
     <div class="container">
-        <h1>Lumiere<br>予約フォーム
+        <h1>石垣島てぃーだハウス<br>予約フォーム
         </h1>
         <div class="info-text">メニュー詳細は当店のLINEアイコンをタップ！<br>プロフィールにメニュー一覧が掲載されております！</div>
         <div class="label">お名前（漢字フルネーム）<span class="required">必須</span></div>
@@ -760,77 +760,49 @@
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('beautifuleyebrows')">美眉メニュー</button>
-            <button type="button" onclick="showMenu('shinyskin')">ツヤ肌メニュー</button>
-            <button type="button" onclick="showMenu('Cosmetologyasawhole')">美容整体メニュー</button>
-            <button type="button" onclick="showMenu('SmallFaceBrainWashing')">小顔脳洗浄メニュー</button>
-            <button type="button" onclick="showMenu('mugwort')">よもぎ蒸しメニュー</button>
-            <button type="button" onclick="showMenu('FaceType')">顔タイプ診断メニュー</button>
+            <button type="button" onclick="showMenu('beautifuleyebrows')">ボディ</button>
+            <button type="button" onclick="showMenu('shinyskin')">フェイシャル</button>
+            <button type="button" onclick="showMenu('Cosmetologyasawhole')">痩身</button>
+            <button type="button" onclick="showMenu('SmallFaceBrainWashing')">ボディ＆フェイシャル</button>
         </div>
-
-        <div id="treatment-text" style="margin-bottom: 20px;"></div>
 
         <div id="beautifuleyebrows" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆美眉メニュー◆</span>
+                <span class="highlight-text">◆ボディ◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')"
-                    data-price="1">ハリウッドブロウリフト(HBL)</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">眉デザインWAX</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="1">メニューA</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">メニューB</button>
             </div>
         </div>
 
         <div id="shinyskin" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ツヤ肌メニュー◆</span>
+                <span class="highlight-text">◆フェイシャル◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment3')"
-                    data-price="15000">セルマン-ツヤ玉トリートメント-</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">フェイシャルWAX</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">メニューA</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">メニューB</button>
             </div>
         </div>
 
         <div id="Cosmetologyasawhole" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆美容整体メニュー◆</span>
+                <span class="highlight-text">◆痩身◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">整体クイックコース
-                    30分</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">整体全身コース
-                    60分</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">メニューA</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">メニューB</button>
             </div>
         </div>
 
         <div id="SmallFaceBrainWashing" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆小顔脳洗浄メニュー◆</span>
+                <span class="highlight-text">◆ボディ＆フェイシャル◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="1">デフォルトコース 60分</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="1">オイルコース 90分</button>
-            </div>
-        </div>
-
-        <div id="mugwort" class="menu-section">
-            <div class="highlight-background">
-                <span class="highlight-text">◆よもぎ蒸しメニュー◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="1">よもぎクイックコース 30分</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="1">よもぎじっくりコース
-                    50分</button>
-            </div>
-        </div>
-
-        <div id="FaceType" class="menu-section">
-            <div class="highlight-background">
-                <span class="highlight-text">◆顔タイプ診断メニュー◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="15000">あなただけの魅力ファッション診断</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="1">メニューA</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="1">メニューB</button>
             </div>
         </div>
 
@@ -1076,29 +1048,48 @@
             // 選択された日時をリセット
             selectedFullDate = '';
 
-            // ボタンの選択状態を切り替える
-            button.classList.toggle('active');
+            // クリックしたボタンの `data-id` を取得
+            let selectedId = button.getAttribute('data-id');
 
-            // 選択されたオプションを取得
-            const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
-
-            if (updatedSelectedButtons.length === 0) {
-                // すべてのボタンの選択が解除された場合、メニュー時間を0にリセット
-                selectedMenuTime = 0;
-                selectedSymptom = null; // 選択されたメニューをリセット
-                menuPrice = 0; // メニュー価格をリセット
+            // クリックしたボタンがすでに `active` なら解除
+            if (button.classList.contains('active')) {
+                button.classList.remove('active');
             } else {
-                // 1つだけ選択状態にする
-                if (updatedSelectedButtons.length > 1) {
-                    updatedSelectedButtons.forEach(btn => btn.classList.remove('active'));
-                    button.classList.add('active'); // クリックしたボタンだけを選択
+                // すでに選択されているボタンを取得（`active` のボタン）
+                let updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
+
+                // もし選択数が3を超えたら、新しい選択をキャンセル
+                if (updatedSelectedButtons.length >= 3) {
+                    return;
                 }
 
-                // 選択されたメニューの時間を取得して保存
-                const selectedMenu = button.textContent;
-                selectedMenuTime = menuTimes[selectedMenu] || 0; // メニュー時間を取得して保存
-                selectedSymptom = [selectedMenu]; // 選択されたメニュー名を配列として保存
-                menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
+                // クリックしたボタンだけ `active` を付与
+                button.classList.add('active');
+            }
+
+            // 現在選択されているボタンを取得（もう一度更新）
+            let updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
+            const treatmentText = document.getElementById('treatment-text');
+            const selectedMenuNameDiv = document.getElementById('selected-menu-name');
+
+            // メニュー時間と価格をリセット
+            selectedMenuTime = 0;
+            selectedSymptom = [];
+            menuPrice = 0;
+
+            if (updatedSelectedButtons.length === 0) {
+                // すべてのボタンの選択が解除された場合
+                selectedMenuTime = 0;
+                selectedSymptom = null;
+                menuPrice = 0;
+            } else {
+                // 選択された各ボタンについて処理
+                updatedSelectedButtons.forEach((btn) => {
+                    const selectedMenu = btn.textContent;
+                    selectedMenuTime += menuTimes[selectedMenu] || 0;
+                    selectedSymptom.push(selectedMenu);
+                    menuPrice += parseInt(btn.getAttribute('data-price'), 10) || 0;
+                });
             }
 
             console.log('選択されたメニューの時間:', selectedMenuTime);
@@ -1106,59 +1097,46 @@
             // カレンダーを更新するために取得する日付を渡す
             fetchAvailability(currentDate);
 
-            // トリートメントテキストを表示
-            const treatmentText = document.getElementById('treatment-text');
-
-            function createTreatmentContent(title, imageUrl, description, price, time) {
-                return `
-        <div class="treatment-container">
-            <div style="font-size: 18px; font-weight: bold;">${title}</div>
-        </div>
-
-        <div class="treatment-image">
-            <div class="spinner-overlay">
-                <div class="spinner"></div>
-            </div>
-            <img src="${imageUrl}" alt="${title}" style="width: 100%; height: 100%; display: none;" 
-                 onload="this.style.display='block'; this.previousElementSibling.style.display='none';">
-        </div>
-
-        <div class="treatment-description">${description}</div>
-
-        <div class="treatment-price">
-            <span>価格：</span><span>${price}</span><br>
-            <span>所要時間：</span><span>${time}</span>
-        </div>`;
-            }
-
             if (treatmentId === 'treatment1') {
-                treatmentText.innerHTML = createTreatmentContent(
-                    'ハリウッドブロウリフト（HBL）',
-                    'https://www.dropbox.com/scl/fi/k0stpqbl53q7ttm46iznw/HBL.png?rlkey=whnz03jog6863gqligzdi4z1h&st=ui5tu3yy&raw=1',
-                    '眉毛を自由自在に操り<br>お顔の80%の印象、額縁とも言われる｢眉毛｣!!<br>眉毛を整える時代、一気に印象が変わります!',
-                    '￥7,000',
-                    '120分'
-                );
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：90分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：6,500円<br>初診料：＋2,200円</strong></div>`;
             } else if (treatmentId === 'treatment2') {
-                treatmentText.innerHTML = createTreatmentContent(
-                    '眉デザインWAX',
-                    'https://www.dropbox.com/scl/fi/u0qmgv2p4qzq5clqmyxxa/WAX.png?rlkey=amcpmgn97gk6or1z9oajjzxli&st=bggi2934&raw=1',
-                    '顔の黄金比、パーツ、バランスに合わせ、お客様に似合う眉をデザインし、整えWAXで仕上げていきます。',
-                    '￥5,500',
-                    '90分'
-                );
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：60分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：4,500円<br>初診料：＋2,200円</strong></div>`;
+            } else if (treatmentId === 'treatment3') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：120分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：8,700円<br>初診料：＋2,200円</strong></div>`;
+            } else if (treatmentId === 'treatment4') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：30分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円<br>初診料：＋2,200円</strong></div>`;
+            } else if (treatmentId === 'treatment5') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：60分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：6,500円</strong></div>`;
+            } else if (treatmentId === 'treatment6') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：30分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：4,500円</strong></div>`;
+            } else if (treatmentId === 'treatment7') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：90分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：8,700円</strong></div>`;
+            } else if (treatmentId === 'treatment8') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：15分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円</strong></div>`;
+            } else if (treatmentId === 'treatment9') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：15分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円</strong></div>`;
             } else {
                 treatmentText.innerHTML = '';
             }
 
-            // 選択されたメニューの名前と価格を取得
-            const symptomName = button.textContent;  // ボタンのテキストを取得
-            selectedSymptom = [symptomName];  // 選択されたメニュー名を配列として保存
-            menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
+    // 移動させる
+    button.parentNode.insertBefore(document.getElementById("selected-menus-display"), button.nextSibling);
+    button.parentNode.insertBefore(document.getElementById("treatment-text"), button.nextSibling);
 
-            // 表示を更新
-            updateDisplayInfo();
-        }
+    // メニュー名一覧を表示
+    const selectedMenusDisplay = document.getElementById("selected-menus-display");
+    if (selectedSymptom && selectedSymptom.length > 0) {
+        selectedMenusDisplay.innerHTML = `【選択中のメニュー】<br>・${selectedSymptom.join(' <br>・ ')}`;
+        selectedMenusDisplay.style.display = 'block';
+    } else {
+        selectedMenusDisplay.innerHTML = '';
+        selectedMenusDisplay.style.display = 'none';
+    }
+
+    treatmentText.style.display = 'block';
+
+    updateDisplayInfo();
+}
 
         function selectirradiations(button) {
             // 選択された日時をリセット
@@ -1249,18 +1227,26 @@
                 button.classList.remove('active');
             });
 
+            // 選択されたメニューの名前を取得
+            let selectedButton = document.querySelector(`.menu-sections button[onclick="showMenu('${menu}')"]`);
+            if (selectedButton) {
+                selectedMenu = selectedButton.innerText;
+            }
+
+            // すべてのメニューボタンの選択状態をリセット
+            document.querySelectorAll('.menu-sections button').forEach(button => {
+                button.classList.remove('active');
+            });
+
             // 選択されたメニューセクションを表示
             document.querySelectorAll('.menu-section').forEach(section => {
                 section.classList.remove('active');
-                section.querySelectorAll('button').forEach(btn => btn.classList.remove('active'));
             });
 
             // 対応するメニューボタンを選択状態にする
-            document.querySelectorAll('.menu-sections button').forEach(button => {
-                if (button.getAttribute('onclick') === `showMenu('${menu}')`) {
-                    button.classList.add('active');
-                }
-            });
+            if (selectedButton) {
+                selectedButton.classList.add('active');
+            }
 
             // 選択されたメニューセクションを表示
             document.getElementById(menu).classList.add('active');
