--- a/index.html
+++ b/index.html
@@ -1387,7 +1387,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n⇒${formData.name}\n\nお名前（ふりがな）\n⇒${formData.phone}\n\n電話番号\n⇒${formData.phone}\n\nご依頼住所\n⇒${formData.phone}\n\n平日or休日\n⇒${formData.highschoolCount}\n\nメニュー\n⇒${formData.selectedSymptom}\nメーカー\n⇒${formData.meka}\n年数\n⇒${formData.nensuu}\n気になるところ\n⇒${formData.message2}\n駐車場の有無\n⇒${formData.visitCount}\n\n【希望日時】\n・第一希望日\n⇒${formatDate(formData.dates[0])}\n\n・第二希望日\n⇒${formatDate(formData.dates[1])}\n\n・第三希望日\n⇒${formatDate(formData.dates[2])}\n\nメッセージ\n⇒${formData.message}`
+                text: `【予約フォーム】\n≪お名前≫\n⇒${formData.name}\n\n≪お名前（ふりがな）≫\n⇒${formData.namefurigana}\n\n≪電話番号≫\n⇒${formData.phone}\n\n≪ご依頼住所≫\n⇒${formData.zyuuyo}\n\n≪平日or休日≫\n⇒${formData.highschoolCount}\n\n≪メニュー≫\n⇒${formData.selectedSymptom}\n≪メーカー≫\n⇒${formData.meka}\n≪年数≫\n⇒${formData.nensuu}\n≪気になるところ≫\n⇒${formData.message2}\n≪駐車場の有無≫\n⇒${formData.visitCount}\n\n【希望日時】\n≪第一希望日≫\n⇒${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n⇒${formatDate(formData.dates[1])}\n\n≪三希望日≫\n⇒${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n⇒${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
