--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
     </div>
 
     <div class="container">
-        <h1>おそうじ本舗大仙店<br>予約フォーム
+        <h1>おそうじ本舗大仙店a<br>予約フォーム
         </h1>
         <div class="label">お名前（漢字フルネーム）<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -974,10 +974,12 @@
             const savedName = localStorage.getItem('name');
             const savedNamefurigana = localStorage.getItem('namefurigana');
             const savedPhone = localStorage.getItem('phone');
+            const savedZyuuyo = localStorage.getItem('zyuuyo');
 
             if (savedName) document.getElementById('name').value = savedName;
-            if (savedNamefurigana) document.getElementById('namefurigana').value = savednamefurigana;
+            if (savedNamefurigana) document.getElementById('namefurigana').value = savedNamefurigana;
             if (savedPhone) document.getElementById('phone').value = savedPhone;
+            if (savedZyuuyo) document.getElementById('zyuuyo').value = savedZyuuyo;
         });
 
         // スムーズスクロール
