--- a/index.html
+++ b/index.html
@@ -1377,28 +1377,34 @@
         alert('お名前を入力してください。');
         return;
     }
+
     if (!formData.phone) {
         alert('電話番号を入力してください。');
         return;
     }
+
     if (!formData.selectedSymptom) {
         alert('メニューを選択してください。');
         return;
     }
+
     if (!formData.dates[0]) {
         alert('第1希望日※必須を選択してください。');
         return;
     }
 
-    // データがない場合は空白にする
-    const meka = formData.meka ? formData.meka : '';
-    const nensuu = formData.nensuu ? formData.nensuu : '';
-    const message2 = formData.message2 ? formData.message2 : '';
-    const visitCount = formData.visitCount ? formData.visitCount : '';
+    // 必要な項目だけメッセージに追加
+    let optionalFields = '';
+    if (formData.meka) optionalFields += `≪メーカー≫\n⇒${formData.meka}\n`;
+    if (formData.nensuu) optionalFields += `≪年数≫\n⇒${formData.nensuu}\n`;
+    if (formData.message2) optionalFields += `≪気になるところ≫\n⇒${formData.message2}\n`;
+    if (formData.visitCount) optionalFields += `≪駐車場の有無≫\n⇒${formData.visitCount}\n`;
+
+    const messageText = `【予約フォーム】\n≪お名前≫\n⇒${formData.name}\n\n≪お名前（ふりがな）≫\n⇒${formData.namefurigana}\n\n≪電話番号≫\n⇒${formData.phone}\n\n≪ご依頼住所≫\n⇒${formData.zyuuyo}\n\n≪平日or休日≫\n⇒${formData.highschoolCount}\n\n≪メニュー項目≫\n⇒${formData.selectedMenu}\n≪メニュー≫\n⇒${formData.selectedSymptom}\n${optionalFields}\n【希望日時】\n≪第一希望日≫\n⇒${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n⇒${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n⇒${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n⇒${formData.message}`;
 
     liff.sendMessages([{
         type: 'text',
-        text: `【予約フォーム】\n≪お名前≫\n⇒${formData.name}\n\n≪お名前（ふりがな）≫\n⇒${formData.namefurigana}\n\n≪電話番号≫\n⇒${formData.phone}\n\n≪ご依頼住所≫\n⇒${formData.zyuuyo}\n\n≪平日or休日≫\n⇒${formData.highschoolCount}\n\n≪メニュー項目≫\n⇒${formData.selectedMenu}\n≪メニュー≫\n⇒${formData.selectedSymptom}\n≪メーカー≫\n⇒${meka}\n≪年数≫\n⇒${nensuu}\n≪気になるところ≫\n⇒${message2}\n≪駐車場の有無≫\n⇒${visitCount}\n\n【希望日時】\n≪第一希望日≫\n⇒${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n⇒${formatDate(formData.dates[1])}\n\n≪三希望日≫\n⇒${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n⇒${formData.message}`
+        text: messageText
     }]).then(() => {
         alert('当日キャンセルは無いようにお願いいたします。');
         liff.closeWindow();
