--- a/index.html
+++ b/index.html
@@ -215,13 +215,18 @@
         }
 
         .date-inputs input[type="datetime-local"] {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
+    width: 100%;
+    padding: 16px;
+    margin-bottom: 24px;
+    font-size: 18px;
+    border: 2px solid #888; /* コントラストを少し強めに */
+    border-radius: 8px;
+    box-sizing: border-box;
+    background-color: #fff;
+    color: #333;
+    appearance: none; /* iOSなどでネイティブUIを抑える（必要に応じて） */
+    touch-action: manipulation; /* モバイルでの反応性を改善 */
+}
 
         .submit-button {
             width: 100%;
