--- a/index.html
+++ b/index.html
@@ -730,26 +730,25 @@
 }
 
 .datetime-input {
-            width: 100%;
-            padding: 15px;
-            /* サイズを大きく調整 */
-            font-size: 18px;
-            /* フォントサイズを大きく */
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
+    width: 100%;
+    padding: 18px; /* 少し大きめにして押しやすく */
+    font-size: 18px;
+    border: 2px solid #888; /* 少し濃くして視認性アップ */
+    border-radius: 8px; /* 指触りの良いデザイン */
+    box-sizing: border-box;
+    background-color: #fff;
+    color: #333;
+    appearance: none; /* OSに左右されにくくする */
+    touch-action: manipulation; /* モバイルのタップ精度向上 */
+    transition: border-color 0.3s, box-shadow 0.3s;
+}
 
-        .datetime-input:focus+.datetime-placeholder,
-        .datetime-input:not(:placeholder-shown)+.datetime-placeholder {
-            visibility: hidden;
-            opacity: 0;
-        }
+.datetime-input:focus {
+    border-color: #007BFF;
+    box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.2); /* タップ時の視覚的フィードバック */
+    outline: none;
+}
 
-        #menuserect,
-  #menuSections {
-    display: none;
-  }
     </style>
 </head>
 
